welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
diff21:3: error: '(' expected but identifier found.
  if n > 21 {
     ^diff21:9: error: illegal start of simple expression
} 
^